--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </head>
 
   <body>
-   <h1>Pilosophie-Special</h1>
+   <h1>Philosophie-Special</h1>
   <div id="startQuestion">
 
     <div id="money" class="money">
